httpserver.yml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  selector:
    app: httpserver
  ports:
  - port: 8080
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
spec:
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
      - name: httpserver
        image: httpserver
        livenessProbe:
          httpGet:
            port: 8080
            path: /healthz
          periodSeconds: 5
        readinessProbe:
          httpGet:
            ### this probe will fail with 404 error code
            ### only httpcode between 200-400 is retreated as success
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 2
        lifecycle:
          preStop:
            exec:
              command: [ "/bin/sh","-c","echo hello" ]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
